[gd_scene load_steps=5 format=2]

[ext_resource path="res://Attacks/DramaAttacks/GraphicsAttack/arrow.png" type="Texture2D" id=1]
[ext_resource path="res://Attacks/DramaAttacks/GraphicsAttack/Graphics/graphic.gd" type="Script" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PackedVector2Array(  )
}

[sub_resource type="Gradient" id=2]
offsets = PackedFloat32Array( 0.0111732, 1 )
colors = PackedColorArray( 0.953125, 0.737183, 0, 1, 0.816406, 0.0190495, 0.0190495, 1 )

[node name="Line2D" type="Line2D"]
width = 2.0
default_color = Color( 0.807843, 0.0627451, 0.0627451, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource( 2 )

[node name="TTL" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="GraphicBullet" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="GraphicBullet"]

[node name="GraphicArrow" type="Area2D" parent="GraphicBullet/PathFollow2D" groups=["bullets"]]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="GraphicBullet/PathFollow2D/GraphicArrow"]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GraphicBullet/PathFollow2D/GraphicArrow"]
position = Vector2( 5, 2 )
scale = Vector2( 1.5625, 1.125 )
polygon = PackedVector2Array( -10.24, -13.3333, -10.24, 8, 10.88, -2.66667 )

[node name="GraphicLine" type="Line2D" parent="."]
points = PackedVector2Array( 132, -9 )
width = 7.0
default_color = Color( 0.85098, 0.0117647, 0.0117647, 1 )
gradient = SubResource( 2 )

[connection signal="timeout" from="TTL" to="." method="_on_TTL_timeout"]
